--- a/web/amoeba/skin/default.css
+++ b/web/amoeba/skin/default.css
@@ -18,7 +18,7 @@
 }
 
 a {
-	color: #E68A01;
+	color: #FFC2C1;
 }
 a:hover {
 	color: #79CDC0;
@@ -30,7 +30,7 @@ a:hover {
 }
 
 .navbar .navbar-nav > .active > a {
-	color: #79CDC0;
+	color: #FFC2C1;
 }
 
 /* flexslider */
