--- a/web/amoeba/skin/default.css
+++ b/web/amoeba/skin/default.css
@@ -91,3 +91,199 @@ a:hover {
 a.scrollup{
 	background:#35A49C;
 }
+
+
+/* [EXS] EXPERIENCE SECTION */
+.timeline {
+    background: url("img/line.png") center repeat-y;
+    width: 851px;
+    padding: 0 0 180px;
+    margin: 0 auto;
+    list-style: none;
+    position: relative;
+	overflow: hidden;
+}
+
+.timeline:after { /* bottom line img */
+    content:"";
+    background: url("img/line-bottom.png") center repeat-y;
+	width: 100%;
+    height: 50px;
+    display:block;
+    position:absolute;
+    bottom:0;
+}
+
+.timeline > li:before { /* marker line */
+	content: "";
+	width: 50px;
+	height: 1px;
+	background: #eee;
+	position: absolute;
+	right: -51px;
+	top: 50%;
+}
+
+.timeline > li:after { /* marker dot */
+	content: " ";
+    width: 16px;
+    height: 16px;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+    border: 3px solid #fff;
+    background: #eee;
+    position: absolute;
+    right: -75px;
+    top: 50%;
+    margin-top: -8px
+}
+
+.timeline > li.right { 
+    float:right;
+}
+
+.timeline > li.right:before { /* marker line for right box */
+    left: -51px;
+    right: auto;
+}
+
+.timeline > li.right:after { /* marker dot for right box */
+    left: -75px;
+    right: auto;
+}
+
+.timeline > li.present:after,
+.timeline > li.right.present:after { /* marker fix for .present */
+	width: 32px;
+	height: 32px;
+	background: #fff;
+	border-color: #eee;
+	margin-top: -16px;
+	top: 50%;
+	right: -82px;
+}
+
+.timeline > li.right.present:after { /* marker dot fix for .present right box */
+	left: -83px;
+	right: auto;
+}
+
+.timeline > li {
+    position: relative;
+    clear: both;
+    float: left;
+    width: 360px;
+    padding: 20px;
+    background: #fafafa;
+    border: 1px solid #eee;
+    margin: -150px 0 0;
+    text-align: center;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
+    -moz-transition: all 0.25s;
+    -o-transition: all 0.25s;
+    -webkit-transition: all 0.25s;
+    transition: all 0.25s
+}
+
+.timeline > li:hover {
+	border-color: #aaa;
+    -moz-box-shadow: 0 0 8px #eee;
+    -webkit-box-shadow: 0 0 8px #eee;
+    box-shadow: 0 0 8px #eee
+}
+
+.timeline > li.year:hover,
+.timeline > li.year.top:hover {
+	border-color: #eee;
+    -moz-box-shadow: none;
+    -webkit-box-shadow: none;
+    box-shadow: none
+}
+
+.timeline .year span {
+	display: inline-block;
+    font-size: 20px;
+    font-family: "Droid sans", sans-serif;
+    color: #aaa;
+    background: #fafafa;
+    padding: 6px 12px;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
+    border: 1px solid #eee
+}
+
+.timeline > li.year { /* year style */
+	text-align: center;
+    margin: 0;
+    padding: 125px 0 250px;
+    float: none;
+    width: 100%;
+    background: transparent;
+    border: 0;
+    -moz-border-radius: 0;
+    -webkit-border-radius: 0;
+    border-radius: 0;
+    -moz-box-shadow: none;
+    -webkit-box-shadow: none;
+    box-shadow: none
+}
+
+.timeline > li.year.top { /* top year style */
+	padding-top: 0;
+}
+
+.timeline > li.break { /* fix overlapped box */
+	margin: 40px 0;
+}
+
+.tl-header {
+	text-align: center;
+    text-shadow: 0 1px #fff;
+    margin-bottom: 15px;
+    padding-bottom: 5px;
+    border-bottom: 1px solid #eee;
+    -moz-box-shadow: 0 1px #fff;
+    -webkit-box-shadow: 0 1px #fff;
+    box-shadow: 0 1px #fff
+}
+
+.tl-role,
+.tl-company {
+	margin: 0;
+	padding: 0;
+	font-size: 24px;
+	line-height: 22px;	
+}
+
+.tl-company {
+	margin: 0 0 10px;
+	font-size: 16px;
+}
+
+.tl-time {
+	font-size: 16px;
+	letter-spacing: -1px;
+	color: #aaa;
+	font-family: "Droid Sans", sans-serif;
+}
+
+.tl-img {
+	display: inline-block;
+    margin-bottom: 20px;
+    max-width: 100%;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
+    border-bottom: 1px solid #eee;
+    -moz-box-shadow: 0 1px #fff;
+    -webkit-box-shadow: 0 1px #fff;
+    box-shadow: 0 1px #fff
+}
+
+.tl-content {
+	text-align: left;
+}
